# athion

./: .gitignore  package-lock.json  package.json
.claude/: launch.json
docs/: PLAN.md
drizzle/: 0000_initial.sql  0000_worthless_johnny_storm.sql  0001_access_request_fields.sql  0001_loose_goliath.sql  0002_gray_quasimodo.sql  0002_rename_tier_to_role.sql  0003_application_messages.sql  0004_chat.sql  0005_interview_channels.sql  0006_chat_message_authors.sql  0007_application_unread.sql  0008_interview_window.sql  0009_drop_unused_tables.sql  0010_password_reset.sql  0011_opendock_releases.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
scripts/: seed-founder.ts
services/chat/: Cargo.toml
services/chat/src/: main.rs
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/app/(auth)/: layout.tsx
src/app/(main)/: layout.tsx  not-found.tsx  page.tsx
src/app/admin/: admin-nav.tsx  layout.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/status/: layout.tsx  live-refresh.tsx  page.tsx  status-bars.tsx
src/components/: benchmark.tsx  brain-logo.tsx  flux-logo.tsx  footer.tsx  gradient-orb.tsx  navbar.tsx  opendock-logo.tsx  page-transition.tsx  parallax.tsx  scroll-reveal.tsx  theme-provider.tsx
src/components/home/: flux-mock.tsx  opendock-mock.tsx  product-showcase.tsx
src/content/blog/: encryption-by-default.mdx  (+3 more)
src/lib/: blog.ts  calendar.ts  constants.ts  crypto.ts  interview.ts  invites.ts  mail.ts  rate-limit.ts  stripe.ts  username.ts
supabase/migrations/: 001_initial_schema.sql
(+190 files in other folders)
